# beer_game

./: .gitignore  Cargo.toml  Rocket.toml  Trunk.toml  index.html  requests.http  rust-toolchain
client/: Cargo.toml
client/src/: app.rs  lib.rs  main.rs
game/: Cargo.toml
game/src/: lib.rs
server/: Cargo.toml
server/src/: game.rs  main.rs
src/: app.rs  game.rs  lib.rs  main.rs
