cargo-features = ["per-package-target"]

[package]
name = "client"
version = "0.1.0"
edition = "2021"
forced-target = "wasm32-unknown-unknown"

[dependencies]
egui = "0.28"
eframe = { version = "0.28", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }
log = "0.4"
wasm-bindgen-futures = "0.4"
web-sys = "0.3.4"
getrandom = { version = "0.2", features = ["js"] }