[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
game = { path = "../game" }
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_sqlite"]
